// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: block;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #303f9f;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    multiline={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`渲染不可用的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: default;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.38);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
  opacity: 1;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: block;
}

.c1 {
  color: rgba(0,0,0,0.38);
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1::before {
  background: transparent;
  background-image: linear-gradient( to right,rgba(0,0,0,0.42) 33%,transparent 0% );
  background-position: left top;
  background-repeat: repeat-x;
  background-size: 5px 1px;
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input sinoui-input--disabled"
  data-testid="baseInput"
  disabled={true}
  onClick={[Function]}
>
  <input
    disabled={true}
    multiline={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`渲染密集模式下的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: block;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #303f9f;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

.c1 > input {
  padding-top: 3px;
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input sinoui-input--dense"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    multiline={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`渲染支持清除功能的input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: none;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #303f9f;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input"
  data-testid="baseInput"
  onClick={[Function]}
  value="123"
>
  <input
    multiline={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="123"
  />
  <svg
    className="sinoui-base-input__clear"
    data-testid="clearIcon"
    fill="currentColor"
    height="1em"
    onClick={[Function]}
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
  </svg>
</div>
`;

exports[`渲染错误状态下的input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  cursor: pointer;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.1875rem;
}

.c0 > input {
  padding: 6px 0 7px;
  border: 0px;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  font-size: 1rem;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: rgba(0,0,0,0.87);
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: block;
  min-width: 0px;
  width: 100%;
  height: 1.1875rem;
}

.c0 > input::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear {
  display: none;
}

.c0 > input:focus {
  outline: 0;
}

.c0 > input:invalid {
  box-shadow: none;
}

.c0 > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__clear {
  display: block;
}

.c0:hover > .sinoui-base-input__endcomponent {
  display: block;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

.c1.c1::after {
  background-color: #f44336;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1::after {
  background-color: #303f9f;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input sinoui-input--error"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    multiline={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;
